src/App.css
@page {
  size: auto;
  margin: 20px 15px 20px 29px !important;
}
@media print {
  .col-sm-1,
  .col-sm-2,
  .col-sm-3,
  .col-sm-4,
  .col-sm-5,
  .col-sm-6,
  .col-sm-7,
  .col-sm-8,
  .col-sm-9,
  .col-sm-10,
  .col-sm-11,
  .col-sm-12 {
    float: left !important;
  }
  .col-sm-12 {
    width: 100%;
  }
  .col-sm-11 {
    width: 91.66666666666666%;
  }
  .col-sm-10 {
    width: 83.33333333333334%;
  }
  .col-sm-9 {
    width: 75%;
  }
  .col-sm-8 {
    width: 66.66666666666666%;
  }
  .col-sm-7 {
    width: 58.333333333333336%;
  }
  .col-sm-6 {
    width: 50%;
  }
  .col-sm-5 {
    width: 41.66666666666667%;
  }
  .col-sm-4 {
    width: 33.33333333333333%;
  }
  .col-sm-3 {
    width: 25%;
  }
  .col-sm-2 {
    width: 16.666666666666664%;
  }
  .col-sm-1 {
    width: 8.333333333333332%;
  }
  input {
    border-width: 0 0 1px;
    border-color: black;
    border-style: solid;
  }
  textarea {
    border-width: 0 0 1px;
    border-color: black;
    border-style: solid;
  }
  .no-print {
    display: none !important;
  }
  body {
    color: black;
  }
}
.row {
  margin: 10px 0;
}
body {
  font-weight: bold;
  background-color: #aaa;
}
.flex-grow {
  flex: 1;
}

